fix grid items overlapping

--- a/style.css
+++ b/style.css
@@ -62,18 +62,19 @@ h1 + button {
 
 #container {
     display: grid;
-    gap: 20px;
+    gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 
 #container div {
+    box-sizing: border-box;
     border-left: 8px black;
     border-style: double;
     padding: 20px;
     text-align: center;
     width: 250px;
-    height: 300px;
+    height: 350px;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.61);
     border-radius: 0px 5px 5px 0px;
   /* background-color: #f2dcb1; */
